<resources>
    <string name="app_name">Medallium</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="underlineName"><b><u>Nombre de Usuario</u></b></string>
    <string name="underlineObtenidos"><b><u>Obtenidos</u></b></string>
    <string name="underlineId"><u>ID de Usuario</u></string>
    <string name="underlineRegister"><u>Registrate</u></string>
    <string name="underlineLogin"><u>Inicia sesión</u></string>
    <string name="underlineElementos"><u>Ver Yo-kais de este elemento</u></string>
    <string name="underlineRangos"><u>Ver Yo-kais de este rango</u></string>
    <string name="underlineProfile"><u>Datos Personales</u></string>
    <string name="underlineCerrarSesion"><u>Cerrar Sesión</u></string>
    <string name="title_activity_drawer_navigation">DrawerNavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="cualidad_principal_info">Los Yo-kai de esta tribu: </string>

    <string name="menu_home">Inicio</string>
    <string name="menu_favs">Favoritos</string>
    <string name="menu_myk">Mis Yo-kai</string>
    <string name="menu_perfil">Mi perfil</string>
    <string name="menu_logout">Cerrar Sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="YKW1_name">Yo-Kai Watch</string>
    <string name="YKW1_fecha">Lanzamiento: 2013 (Japón) | 2015 (Occidente)</string>
    <string name="YKW1_plataformas">Plataformas: Nintendo 3DS, Nintendo Switch (Remaster en Japón)</string>
    <string name="YKW1_description">El primer juego de la serie introduce el mundo de los Yo-kai, criaturas invisibles que afectan la vida diaria de los humanos. El protagonista (Nathan o Katie) obtiene un Yo-kai Watch, un reloj especial que permite ver y hacerse amigo de los Yo-kai. A lo largo del juego, explora Floresia (Springdale), resuelve problemas causados por los Yo-kai y enfrenta a enemigos poderosos, incluyendo al malvado Yo-kai Damead.</string>
    <string name="YKW2_name">Yo-Kai Watch 2</string>
    <string name="YKW2_fecha">Lanzamiento: 2014 (Japón) | 2016-2017 (Occidente) </string>
    <string name="YKW2_plataformas">Plataformas: Nintendo 3DS </string>
    <string name="YKW2_description">Expande la historia del primer juego con nuevas mecánicas, como la posibilidad de viajar al pasado y conocer el origen del Yo-kai Watch. Se enfrentan dos facciones de Yo-kai: Fantasqueletos y Carnánimas, lo que influye en la historia y en qué Yo-kai se pueden conseguir. Se introducen nuevos Yo-kai, monturas en tren y el modo multijugador.</string>
    <string name="YKW3_name">Yo-Kai Watch 3</string>
    <string name="YKW3_fecha">Lanzamiento: 2016 (Japón) | 2018-2019 (Occidente) </string>
    <string name="YKW3_plataformas">Plataformas: Nintendo 3DS </string>
    <string name="YKW3_description">El protagonista y su familia se mudan a San Peanutsburg (St. Peanutsburg), una ciudad inspirada en EE.UU., con un nuevo elenco de Yo-kai. Además, se introduce un segundo protagonista, Mac (Hailey Anne), que investiga casos paranormales en Floresia. </string>
</resources>