<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.finalproyect.medallium.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_favs"
        android:name="com.finalproyect.medallium.ui.favoritos.YokaiFragment"
        android:label="@string/menu_favs"
        tools:layout="@layout/fragment_favoritos" />

    <fragment
        android:id="@+id/nav_myk"
        android:name="com.finalproyect.medallium.ui.obtenidos.MisyokaiFragment"
        android:label="@string/menu_myk"
        tools:layout="@layout/fragment_misyokai" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.finalproyect.medallium.ui.profile.ProfileFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_profile"/>
    <activity
        android:id="@+id/nav_logout"
        android:name="com.finalproyect.medallium.LoginActivity"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_profile"
        />
</navigation>