<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/main_background"
    tools:context=".Profile">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/fotoperfil"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/logoprovisional"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/datosTitle"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:text="@string/underlineProfile"
        android:textAlignment="center"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/fotoperfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="340dp"
        android:layout_height="80dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/datosTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:background="@drawable/custom_layout_roundedborderprofile"
        android:layout_marginTop="50dp"
        >

        <TextView
            android:id="@+id/nameTitle"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/underlineName"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:paddingHorizontal="15dp"
            android:paddingTop="10dp"/>

        <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="Antonio"
            android:textSize="17dp"
            android:textColor="@color/black"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="8dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="340dp"
        android:layout_height="80dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_layout_roundedborderprofile"
        >

        <TextView
            android:id="@+id/idTitle"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/underlineId"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:paddingHorizontal="15dp"
            android:paddingTop="10dp"/>

        <TextView
            android:id="@+id/numId"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="EU-1234567890"
            android:textSize="17dp"
            android:textColor="@color/black"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="8dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="340dp"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2"
        android:background="@drawable/custom_layout_roundedborderprofile"
        android:layout_marginVertical="-5dp"
        >

        <TextView
            android:id="@+id/obtenidosTitle"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/underlineObtenidos"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:paddingHorizontal="15dp"
            android:paddingTop="10dp"/>

        <TextView
            android:id="@+id/numObtenidos"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:text="105/300"
            android:textSize="17dp"
            android:textColor="@color/black"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="8dp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/cerrarSesion"
        android:layout_width="108dp"
        android:layout_height="20dp"
        android:text="@string/underlineCerrarSesion"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/main"
        android:layout_marginBottom="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="30dp"
        app:layout_constraintHorizontal_bias="0.8"
        android:textSize="17dp"
        android:layout_marginRight="35dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
